# expected

./: CMakeLists.txt  README.md  azure-pipelines.yml
cmake/: expected-config.cmake
include/: expected.hpp
src/: expected.cpp
test/: CMakeLists.txt  core_test.cpp
